--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -8,6 +8,10 @@
   background-color: @tab-bar-background-color;
   border-bottom: 1px solid @base-border-color;
 
+  &::-webkit-scrollbar {
+      display: none;
+  }
+
   .tab {
     color: @text-color;
     height: @tab-height;
