--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -91,6 +91,9 @@
 
 @tab-height: 40px;
 
+@scrollbar-background-color: #222425; // Needs to be opaque -> atom/atom/issues/4578
+@scrollbar-color: rgba(92, 92, 92, 0.5);
+
 // Misc
 @component-border-radius: 2px;
 @font-family: -apple-system, BlinkMacSystemFont,
